# WebAI-MCP

./: .gitignore  .nextest.toml  AGENTS.md  AUTO_PASTE_GUIDE.md  BRANCH_PROTECTION_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  DEV_BRANCH_STRATEGY.md  EXECUTION-PLAN.md  GH-REVIEW-SUMMARY.md  Justfile  MASTER-CHECKLIST.md  README.md  RUN-THIS-PROMPT.md  WINDOWS_AUTO_PASTE_GUIDE.md  architecture.md  convert-rust.md  deny.toml  documentation.md  implement.md  package-lock.json  package.json  plans.md  pnpm-lock.yaml  prompt.md  prompt.txt  rust-toolchain.toml  todo.md  webai_mcp_complete_guide.md
.AGENTS/: lessons.md  todo.md
.agent-state/: last-head.txt
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  LOCAL_ONLY.md  WORKFLOW_SUMMARY.md  dependabot.yml
chrome-extension/: background.js  devtools.html  devtools.js  manifest.json  panel.html  panel.js
ci/: ci.config.json  tool-versions.json
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs  options.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs  tools.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  browser_detect.rs  browser_provider.rs  flow_adapter.rs  lib.rs  os_paste.rs  proxy.rs  routes.rs  routes_caps.rs  routes_proxy.rs  routes_ws.rs  state.rs  storage.rs  user_data_dir.rs  ws_schema.rs
crates/server/src/ws_handlers/: backpressure.rs  flows.rs  mod.rs
crates/server/tests/: all_xhr.rs  audits.rs  basic.rs  browser_detect.rs  browser_provider.rs  capabilities.rs  current_url.rs  log_limits.rs  logs.rs  logs_errors.rs  network_errors.rs  network_success.rs  os_paste.rs  proxy.rs  selected_element.rs  shutdown.rs  state.rs  storage.rs  storage_handlers.rs  test_connectivity.rs  user_data_dir.rs  wipelogs.rs  ws.rs  ws_backpressure.rs  ws_flows.rs  ws_schema.rs  ws_state.rs
crates/webai/: Cargo.toml
crates/webai/src/: main.rs
docs/: ARCHIVE.md  CHANGELOG_AUTOMATION.md  LOCAL_CICD.md  RELEASE_SETUP.md  coverage-report.md  optimization-report.md  standardization-report.md
legacy/: README.md
(+130 files in other folders)
